network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-access
  namespace: your-namespace
spec:
  podSelector:
    matchLabels:
      app: httpd
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: db
    - podSelector:
        matchLabels:
          httpdd: dddd
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: db
